# Time-To-Do

./: .gitignore  CMakeLists.txt  README.md  Time-To-Do.desktop  TimetdApplication.cc  TimetdApplication.h  TimetdAppprefs.cc  TimetdAppprefs.h  TimetdAppwindow.cc  TimetdAppwindow.h  app_menu.glade  credit.txt  main.cc  org.gtkmm.timetodo.gschema.xml  prefs.glade  prefs.glade~  resources.c  setup.sh  timeToDo.css  timetodo.gresource.xml  window.glade  window.glade~
